Fix scrollbars

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -261,7 +261,7 @@
     -fx-padding: 8 1 8 1;
 }
 
-.scroll-bar:horizontal {
+.list-view .scroll-bar:horizontal {
     -fx-opacity: 1;
 }
 
