--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -258,7 +258,7 @@
     -fx-padding: 8 1 8 1;
 }
 
-.scroll-bar:horizontal {
+.list-view .scroll-bar:horizontal {
     -fx-opacity: 1;
     -fx-padding:-2;
 }
